:heavy_plus_sign: Add siunitx
A comprehensive (SI) units package available from https://ctan.org/pkg/siunitx. Also declared the unit year (shortened as yr) and applied this SI unit macro across the thesis (e.g. 5 m becomes \SI{5}{\metre}).

--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,7 @@
 \usepackage[bookmarks]{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{mathtools}
+\usepackage{siunitx}
 \usepackage{textcomp}
 
 \makeglossaries[\acronymtype]
@@ -20,6 +21,7 @@
 
 \newacronym{ConvNets}{ConvNets}{Convolutional Neural Networks}
 
+\DeclareSIUnit\year{yr}
 
 \title{
 {The subglacial landscape and hydrology of Antarctica as mapped from space}\\
