--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,30 +1,25 @@
 \begin{titlepage}
   \begin{center}
-    \vspace*{1cm}
 
-    \Huge
-    \textbf{Deep Learning in the Cryosphere}
-
-    \vspace{0.5cm}
     \LARGE
-    The subglacial landscape and hydrology of Antarctica as mapped from space
+    \textbf{
+      The subglacial landscape and hydrology of Antarctica as mapped from space
+    }
 
-    \vspace{1.5cm}
+    \includegraphics[width=1.0\textwidth]{chp0_thesis_key_figure}
 
-    \textbf{Wei Ji Leong}
-
-    \vfill
-
+    \Large
     A thesis presented for the degree of\\
     Doctor of Philosophy
 
     \vspace{0.8cm}
 
-    \includegraphics[width=0.4\textwidth]{arc_logo}
+    \textbf{Wei Ji Leong}
+
+    \includegraphics[width=0.4\textwidth]{0_arc_logo.jpg}
 
     \Large
-    Antarctic Research Centre\\
-    Victoria University of Wellington\\
+    Antarctic Research Centre, Victoria University of Wellington\\
     New Zealand\\
     \today
 
