:art: Fix macros, sections and figures in Chp 2 DeepBedMap
Trying to stay true to the typesetted DeepBedMap paper at https://github.com/weiji14/deepbedmap/pull/189. But still needed to:

- Add macro for units (\unit)
- Add macro to fix tables (\tophline, \middlehline, \bottomhline) and
- Change figures to be `chp2_fig*` and remove extensions (png/pdf/eps).
- Use tabularx to try and get table width within textwidth
- Turn Abstract, code/data availability and acknowledgements into their own sections

Should update the bibliography too at some point. Also no figures added as of yet, will include them a bit later.

--- a/thesis.tex
+++ b/thesis.tex
@@ -10,12 +10,13 @@
 \usepackage[acronym,symbols,nogroupskip,nonumberlist]{glossaries-extra}
 \usepackage{graphicx}
 \graphicspath{ {figures/} }
-\DeclareGraphicsExtensions{.png,.pdf}  % use during development
-% \DeclareGraphicsExtensions{.pdf,.png}  % use for final production
+\DeclareGraphicsExtensions{.png,.pdf,.eps}  % use during development
+% \DeclareGraphicsExtensions{.eps,.pdf,.png}  % use for final production
 \usepackage[bookmarks]{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{mathtools}
 \usepackage{siunitx}
+\usepackage{tabularx}
 \usepackage{textcomp}
 
 \makeglossaries[\acronymtype]
@@ -61,7 +62,7 @@ I want to thank...
 \chapter{Introduction}
 \input{chapters/01_introduction}
 
-\chapter{Chapter Two Title}
+\chapter{DeepBedMap: a deep neural network for resolving the bed topography of Antarctica}
 \input{chapters/02_chapter}
 
 \chapter{Chapter Three Title}
