:heavy_plus_sign: Add algorithmicx, fontenc, titlesec
Some more LaTeX cran packages for the thesis. Algorithmicx for writing pseudocode (), fontenc for glyph stuff (https://tex.stackexchange.com/questions/664/why-should-i-use-usepackaget1fontenc), titlesec for 'paragraph' level subsubsubsections (https://tex.stackexchange.com/questions/60209/how-to-add-an-extra-level-of-sections-with-headings-below-subsubsection). Made some tweaks to the page margins, setup SIrange to use em-dash, and enabled citation backref (https://husseinbakri.org/essential-latex-bibtex-and-biblatex-tips-for-research-students/). Also some adding some geo-, cryo- and climate specific acronyms :)

Actually still writing (and editing) heaps! Got a pretty good first draft of Chapter 4 done (after weeks of revision) and might commit it when I feel like it. Chapter 3 is a bit less polished but will work on it and hopefully get something substantial before university closes for the break. Hanging on!

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,12 +1,15 @@
 \documentclass[12pt,twoside]{book}
-\usepackage[a4paper,width=150mm,top=25mm,bottom=25mm]{geometry}
-\usepackage[natbib,style=apa,backend=biber]{biblatex}
+\usepackage[a4paper,width=150mm,top=25mm,bottom=20mm,headheight=14.5pt]{geometry}
+\usepackage[natbib,style=apa,backend=biber,backref=true]{biblatex}
 \bibliography{thesis.bib}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+\usepackage{algorithm}% http://ctan.org/pkg/algorithm
+\usepackage{algpseudocode}% http://ctan.org/pkg/algorithmicx
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage[T1]{fontenc}
 \usepackage[acronym,symbols,nogroupskip,nonumberlist]{glossaries-extra}
 \usepackage{graphicx}
 \graphicspath{ {figures/} }
@@ -18,13 +21,28 @@
 \usepackage{siunitx}
 \usepackage{tabularx}
 \usepackage{textcomp}
+\usepackage{titlesec}
 
+% SIrange using em-dash
+\sisetup{range-phrase=--}
+
+% subsubsubsections paragraphs
+\setcounter{secnumdepth}{3}
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
+% glossary items
 \makeglossaries[\acronymtype]
 
 \glsxtrnewsymbol[description={hydropotential}]{phi}{\ensuremath{\phi}}
 \glsxtrnewsymbol[description={time}]{t}{\ensuremath{t}}
-
 \newacronym{ConvNets}{ConvNets}{Convolutional Neural Networks}
+\newacronym{DEM}{DEM}{Digital Elevation Model}
+\newacronym{RES}{RES}{Radio-echo sounding}
+\newacronym{SLE}{SLE}{Sea level equivalent}
+%Not a Number (NaN)
 
 \DeclareSIUnit\year{yr}
 
