:memo: First raw draft of Acknowledgements
This was written in one go on the last day of uni in my office on 18 December 2020, and It was a very heartfelt experience (yes I cried). I'm publishing this here without any editing or polish (unlike the other stuff I'm hiding away now), just because it's nice to present this in an original, raw form. Thank you to all who have shared this journey with me :)

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{CJKutf8}
 \usepackage[T1]{fontenc}
 \usepackage[acronym,symbols,nogroupskip,nonumberlist]{glossaries-extra}
 \usepackage{graphicx}
@@ -62,13 +63,63 @@
 Abstract goes here
 
 \chapter*{Dedication}
-To Penny
+To Penny, who led me, so profoundly, to be
 
 \chapter*{Declaration}
 I declare that..
 
 \chapter*{Acknowledgements}
-I want to thank...
+
+\begin{CJK*}{UTF8}{gbsn}
+每一个成功男人的背后，都有一个伟大的女人。
+Every step along this journey has not been without the support of a great community behind me.
+My Chinese name is 梁伟吉，each character signifying a part of who I am, my duty in this world, and the enormous privillege that has allowed me to make it to this day.
+
+Family 粱 (Leong) comes first.
+My dearest partner Penny Qiu Yue 邱乐, you have went above and beyond what a normal long distance relationship entails, keeping me company daily through good times and bad, being patient, trusting and more than I could ever express in my supposedly native broken Malaysian/Bruneian Chinese.
+Above all, thank you for sharing the most precious asset there is - 时间 - time - which for that, I am forever grateful.
+To my younger sister Wei Qian 伟倩 and brother Wei Tong 伟桐，growing up with you two in Brunei has taught me the importance of sharing and looking after each other, so thank you for your understanding, for all the catch up calls, and simply for being.
+For dad and mum，梁耀明 and 陈碹丝，it takes a million to raise one child, let alone three, and I have lost count of the number of side jobs you've had over the years, especially the struggles in recent times, both of you deserve a special thank you and a long holiday.
+
+To my local family in Wellington, Jaclyn and David Chai, for the nourishment you have provided over the years in the form of yummy Malaysian style vegetarian food.
+It is unbelievable how fast time flies, seeing your two kids ZH and Yi Ling grow tall and mature, you are all my second family and will always be remembered.
+
+Greatness 伟 (Wei) of teachers is next.
+To my great supervisor Huw Horgan (and his amazing partner Ruschle), I sometimes wonder how a person from the tropics without a trace of snow got into studying Antarctic ice, and obviously it was because of you, from that time in 2014 studying proglacial lakes at Mount Cook national park, to my 2015 Honours project on mapping potential subglacial estuaries in Antarctica, to this very PhD thesis 2017-2021.
+A very big thank you for allowing me to do my work remotely using satellites, sending me randomly on exchanges to Alaska and Austria to realize how big the world truly is, for giving me the space to develop independently, while providing top notch Yoda-like advice that takes me weeks and months to figure out.
+
+Thank you to all my Geography teachers and mentors over the years.
+In particular, to my secondary school teacher Veronica Chan at Chung Hwa Middle School, for your great style of Geography teaching with funny stories and sketches, it was weird that you didn't recommend me taking Geography in high school, but here I am now.
+% To my high school teacher
+To my university lecturer Mairéad de Róiste, for putting me on this journey into Geographic Information Systems (GIS), setting good examples on how to tutor the next generation of students, and also for drilling in Cartogrphic best practices.
+To Karl Baker at e-Spatial, for passing on your guru level of stacking and mosaicking aerial imagery, arranging map layers to perfection, and for being a role model on how to be a respectable GIS professional.
+
+Luck 吉 (Ji) is the last but not least.
+I feel really fortunate to be able to stand on the shoulders of giants, and would like to acknowledge at least some of the many people I've met along this journey.
+
+\paragraph{Open source}
+
+To Leonardo Uieda, DongDong Tian 田冬冬, Liam Toney and the rest of the PyGMT team, and also to Paul Wessel for his enduring work on the Generic Mapping Tools (GMT) package over many decades, it is a pleasure to have such a great tool for producing beautiful maps, thank you for all the new features and bug fixes, keep up the good work!
+
+\paragraph{Europe}
+
+To Poonam Vishwas, KaiKai Xue, Yawen Tan, and all the friends I met in the 2019 Erasmus+ exchange at ZGIS, University of Salzburg, Austria, it was an awesome experience having so many like-minded people researching GIS together in Europe, an experience I will always treasure.
+To Dr. Hermann Klug, thank you for warmly inviting me to Salzburg and sorting out all manners of logistics in German, and to Dr. Dirk Tiede for introducing me to Object Based Image Analysis and providing a conceptual framework for understand the place of Convolutional Neural Networks in the wider field supervised classification is GIS.
+
+\paragraph{United States}
+
+To Anushilan Acharya, Indraneel Kasmalkar, Whyjay Zheng, and all my friends in the 2018 McCarthy International Summer School in Glaciology, it was a great pleasure meeting you all, and I look forward to seeing some of you again at some point!
+To Dr. Regine Hock, thank you for inviting me to Alaska and giving me a once in a lifetime experience of stepping on a big glacier, and to Dr. Kelly Brunt for some great lessons on the ICESat-2 laser altimetry satellite!
+To the International Glaciological Society (IGS), thank you for the generous early career travel grant and the chance to present a talk at the 2019 IGS Five Decades of Radioglaciology Symposium at Stanford University.
+
+\paragraph{New Zealand}
+
+To Arran Whiteford, Alanna Alevropoulos-Borrill, Francesca Baldacchino, my CO522 office mates at the Antarctic Research Centre, for all the yarns about ice and other topics, I couldn't have asked for a nicer group of friendly folks to do my PhD with!
+To Dao Polsiri and Michelle Dow, thank you for sorting out all sorts of paperwork from flight ticket changes to funding for trivial things, and also to Aleksandr Beliaev, for troubleshooting issues with the UNIX servers and putting up with my overuse of storage, RAM, GPU resources and all.
+
+Finally to anyone that I left out, you are not unnoticed, this sentence is for you, and I hope you enjoy reading this thesis just as much as I do.
+
+\end{CJK*}
 
 \tableofcontents
 \listoffigures
