:memo: Thesis snapshot on 26 Jan 2021
This is (nearly) it. After multiple revisions (read: blood, sweat and literal tears), I'm committing this draft to git history. The original plan was to have multiple snapshots over time as I worked on it but the git diff would just be incomprehensible anyway. A big thank you to my supervisor Huw Horgan for not fainting at some of the earlier drafts. I'm nearly there, this is the final stretch, so let's survive this.

Title: The subglacial landscape and hydrology of Antarctica as mapped from space
Chapter 1 - Introduction
Chapter 2 - DeepBedMap: a deep neural network for resolving the bed topography of Antarctica
Chapter 3 - The role of subglacial topography on Antarctic ice flow
Chapter 4 - Automated classification of active subglacial lakes in Antarctica from ICESat-2/ATLAS laser altimetry (2018--2020)
Chapter 5 - Conclusions

Figures will come next time, as will more revisions.

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,7 +6,7 @@
       The subglacial landscape and hydrology of Antarctica as mapped from space
     }
 
-    \includegraphics[width=1.0\textwidth]{chp0_thesis_key_figure}
+    \includegraphics[width=1.0\textwidth]{0_thesis_key_figure}
 
     \Large
     A thesis presented for the degree of\\
