--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,7 @@
 \usepackage{algorithm}% http://ctan.org/pkg/algorithm
 \usepackage{algpseudocode}% http://ctan.org/pkg/algorithmicx
 \usepackage{amsmath,amsfonts,amssymb}
+\usepackage[toc,page]{appendix}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{CJKutf8}
@@ -60,7 +61,25 @@
 \input{titlepage}
 
 \chapter*{Abstract}
-Abstract goes here
+
+To narrow uncertainties in the Antarctic ice sheet's contribution to sea level rise, we present a collection of novel machine learning and automated satellite remote sensing methods that use ice surface observations to infer the subglacial nature of Antarctica.
+A super-resolution deep neural network called DeepBedMap was designed and trained to produce a high-resolution (\SI{250}{\metre}) bed elevation model of Antarctica called DeepBedMap\_DEM that preserves bed roughness details and can be used for catchment- to continent-scale ice sheet modelling studies.
+This rougher, high-resolution (\SI{250}{\metre}) DeepBedMap\_DEM is compared with a smoother, medium-resolution (\SI{500}{\metre}) BedMachine Antarctica topography in a basal inversion experiment over Pine Island Glacier, with results motivating the need for more research investigating the interacting roles of subglacial hydrology which influences skin drag and high resolution bed topographies which influences form drag.
+Active subglacial lakes in Antarctica over the 2018-2020 time period were mapped using an unsupervised density-based classification method on ICESat-2 point cloud data, yielding 149 active subglacial lakes, including 12 new lakes in the 86--88°S area not detected by the previous ICESat (2003-2009) mission.
+This thesis showcases both the rich diversity in subglacial landscapes and the dynamic nature of subglacial hydrology in Antarctica, forming a foundation enabling the accurate modelling of overland ice flow in critical regions of the vulnerable West Antarctic Ice Sheet.
+
+
+\section*{Plain language summary}
+
+Antarctica has a lot of ice, but we're not quite sure how fast it can slide into the sea and cause water to go up in beaches around the world.
+So we teach computers to solve some hard math problems that can help to tell us how fast sea water might go up.
+These computers are fed with lots of pictures taken from cameras high up in the sky and in space, and also from lasers shooting down at earth and bouncing back to tell us if the ice in Antarctica is going up or down.
+Ice sits on top of rock in Antarctica, and after some practice, the computers actually get pretty good at telling us how high and bumpy the rock is.
+We think that the rock under the ice is actually quite bumpy, and ice probably doesn't like sliding over bumpy rocks since it's rough.
+But sometimes ice doesn't mind sliding over rough bits of rock, usually because the rock moves along with it, or because there's some water between the rock and ice that makes things slippery, but we have to ask our smart computers to be sure.
+Once in a while, our lasers in the sky seem to suggest that ice is going up or down a bit strangely in some parts of Antarctica.
+Smart people think that these are lakes hiding under the ice that fill up with water or drain, and we manage to find quite a few of these lakes over Antarctica, especially in an area called Whillans Ice Stream on the Siple Coast.
+We hope that the computers are able to keep on learning faster because there's a lot of pictures that show ice moving pretty fast, and it doesn't look like there's much time before a big chunk of ice might break away in Antarctica and flood many beaches around the world.
 
 \chapter*{Dedication}
 To Penny, who led me, so profoundly, to be
@@ -132,19 +151,25 @@ Finally to anyone that I left out, you are not unnoticed, this sentence is for y
 \input{chapters/01_introduction}
 
 \chapter{DeepBedMap: a deep neural network for resolving the bed topography of Antarctica}
+\label{ch:2}
+\chaptermark{DeepBedMap}
 \input{chapters/02_chapter}
 
-\chapter{Chapter Three Title}
+\chapter{The role of subglacial topography on Antarctic ice flow}
+\label{ch:3}
+\chaptermark{Basal inversion}
 \input{chapters/03_chapter}
 
-\chapter{Chapter Four Title}
+\chapter{Automated classification of active subglacial lakes in Antarctica from ICESat-2/ATLAS laser altimetry (2018--2020)}
+\label{ch:4}
+\chaptermark{ICESat-2 subglacial lakes}
 \input{chapters/04_chapter}
 
 \chapter{Conclusion}
 \input{chapters/05_conclusion}
 
 \appendix
-\chapter{Appendix Title}
+\chapter{Appendix}
 \input{chapters/06_appendix}
 
 \printbibliography
