:memo: Revise Chapter 4 to use ICESat-2 data up to 20201111
Mostly editing Chapter 4 ICESat-2 subglacial lakes to use new data up to 2020-11-11 (see https://github.com/weiji14/deepicedrain/pull/241). Added two new figures pulled from papers, wrote a significant chunk on comparing this subglacial lake inventory with previous studies and reorganized the multi-lobe subglacial lake subsection. Also clarified some logic here and there (backed by citations) and moved the hydropotential section to the Appendix.

--- a/thesis.bib
+++ b/thesis.bib
@@ -77,6 +77,34 @@
   title = {Sentinel-1 Mission Overview},
 }
 
+@article{Barberquickhullalgorithmconvex1996,
+  author = {Barber, C. Bradford and Dobkin, David P. and Huhdanpaa, Hannu},
+  date = {1996-12},
+  doi = {10.1145/235815.235821},
+  issn = {0098-3500, 1557-7295},
+  journaltitle = {ACM Transactions on Mathematical Software},
+  langid = {english},
+  number = {4},
+  pages = {469--483},
+  shortjournal = {ACM Trans. Math. Softw.},
+  title = {The Quickhull Algorithm for Convex Hulls},
+  volume = {22},
+}
+
+@article{BellWidespreadPersistentThickening2011,
+  author = {Bell, R. E. and Ferraccioli, F. and Creyts, T. T. and Braaten, D. and Corr, H. and Das, I. and Damaske, D. and Frearson, N. and Jordan, T. and Rose, K. and Studinger, M. and Wolovick, M.},
+  date = {2011-03-25},
+  doi = {10.1126/science.1200109},
+  issn = {0036-8075, 1095-9203},
+  journaltitle = {Science},
+  langid = {english},
+  number = {6024},
+  pages = {1592--1595},
+  shortjournal = {Science},
+  title = {Widespread {{Persistent Thickening}} of the {{East Antarctic Ice Sheet}} by {{Freezing}} from the {{Base}}},
+  volume = {331},
+}
+
 @article{BellAntarcticsurfacehydrology2018,
   author = {Bell, Robin E. and Banwell, Alison F. and Trusel, Luke D. and Kingslake, Jonathan},
   date = {2018-12},
@@ -170,7 +198,7 @@
 }
 
 @article{BougamontNumericalinvestigationsslowdown2003,
-  author = {Bougamont, Marion and Tulaczyk, Slawek and Joughin, Ian},
+  author = {Bougamont, Marion and Tulaczyk, Slawek M. and Joughin, Ian},
   date = {2003},
   doi = {10.3189/172756403781815555},
   issn = {0260-3055, 1727-5644},
@@ -1442,7 +1470,7 @@
 }
 
 @article{JoughinBasalconditionsPine2009,
-  author = {Joughin, Ian and Tulaczyk, Slawek and Bamber, Jonathan L. and Blankenship, Don and Holt, John W. and Scambos, Ted and Vaughan, David G.},
+  author = {Joughin, Ian and Tulaczyk, Slawek M. and Bamber, Jonathan L. and Blankenship, Don and Holt, John W. and Scambos, Ted and Vaughan, David G.},
   date = {2009},
   doi = {10.3189/002214309788608705},
   issn = {0022-1430, 1727-5652},
@@ -1707,6 +1735,21 @@
   volume = {5},
 }
 
+@article{LigtenbergQuantifyingseasonalbreathing2012,
+  options = {useprefix=1},
+  author = {Ligtenberg, S. R. M. and Horwath, M. and van den Broeke, M. R. and Legrésy, B.},
+  date = {2012-12-16},
+  doi = {10.1029/2012GL053628},
+  issn = {00948276},
+  journaltitle = {Geophysical Research Letters},
+  langid = {english},
+  number = {23},
+  pages = {n/a--n/a},
+  shortjournal = {Geophys. Res. Lett.},
+  title = {Quantifying the Seasonal “Breathing” of the {{Antarctic}} Ice Sheet: “{{BREATHING}}” {{OF THE ANTARCTIC ICE SHEET}}},
+  volume = {39},
+}
+
 @online{LimEnhancedDeepResidual2017,
   author = {Lim, Bee and Son, Sanghyun and Kim, Heewon and Nah, Seungjun and Lee, Kyoung Mu},
   url = {http://arxiv.org/abs/1707.02921},
@@ -1716,6 +1759,19 @@
   eprinttype = {arxiv},
   title = {Enhanced {{Deep Residual Networks}} for {{Single Image Super}}-{{Resolution}}},
   urldate = {2019-01-01},
+}
+
+@article{LindzeyAerogeophysicalcharacterizationactive2020,
+  author = {Lindzey, Laura E. and Beem, Lucas H. and Young, Duncan A. and Quartini, Enrica and Blankenship, Donald D. and Lee, Choon-Ki and Lee, Won Sang and Lee, Jong Ik and Lee, Joohan},
+  date = {2020-07-15},
+  doi = {10.5194/tc-14-2217-2020},
+  issn = {1994-0424},
+  journaltitle = {The Cryosphere},
+  langid = {english},
+  number = {7},
+  pages = {2217--2233},
+  title = {Aerogeophysical Characterization of an Active Subglacial Lake System in the {{David Glacier}} Catchment, {{Antarctica}}},
+  volume = {14},
 }
 
 @online{LiuPSGANGenerativeAdversarial2018,
@@ -1804,6 +1860,16 @@
   volume = {97},
 }
 
+@article{MalczykRepeatSubglacialLake2020,
+  author = {Malczyk, G. and Gourmelen, N. and Goldberg, D. and Wuite, J. and Nagler, T.},
+  date = {2020-11-09},
+  doi = {10.1029/2020GL089658},
+  issn = {0094-8276, 1944-8007},
+  journaltitle = {Geophysical Research Letters},
+  langid = {english},
+  title = {Repeat {{Subglacial Lake Drainage}} and {{Filling}} beneath {{Thwaites Glacier}}},
+}
+
 @article{MarkusIceCloudland2017,
   author = {Markus, Thorsten and Neumann, Tom and Martino, Anthony and Abdalati, Waleed and Brunt, Kelly and Csatho, Beata and Farrell, Sinead and Fricker, Helen and Gardner, Alex and Harding, David and Jasinski, Michael and Kwok, Ron and Magruder, Lori and Lubin, Dan and Luthcke, Scott and Morison, James and Nelson, Ross and Neuenschwander, Amy and Palm, Stephen and Popescu, Sorin and Shum, Ck and Schutz, Bob E. and Smith, Benjamin E. and Yang, Yuekui and Zwally, Jay},
   date = {2017-03},
@@ -1856,7 +1922,7 @@
 }
 
 @article{MikuckiSubglacialLakeWhillans2016,
-  author = {Mikucki, J. A. and Lee, P. A. and Ghosh, D. and Purcell, A. M. and Mitchell, A. C. and Mankoff, K. D. and Fisher, A. T. and Tulaczyk, S. and Carter, S. and Siegfried, M. R. and Fricker, H. A. and Hodson, T. and Coenen, J. and Powell, R. and Scherer, R. and Vick-Majors, T. and Achberger, A. A. and Christner, B. C. and Tranter, M. and {the WISSARD Science Team}},
+  author = {Mikucki, J. A. and Lee, P. A. and Ghosh, D. and Purcell, A. M. and Mitchell, A. C. and Mankoff, K. D. and Fisher, A. T. and Tulaczyk, Slawek M. and Carter, S. and Siegfried, M. R. and Fricker, H. A. and Hodson, T. and Coenen, J. and Powell, R. and Scherer, R. and Vick-Majors, T. and Achberger, A. A. and Christner, B. C. and Tranter, M. and {the WISSARD Science Team}},
   date = {2016-01-28},
   doi = {10.1098/rsta.2014.0290},
   issn = {1364-503X, 1471-2962},
@@ -2634,7 +2700,7 @@
 }
 
 @article{SiegfriedEpisodicicevelocity2016,
-  author = {Siegfried, Matthew Ross and Fricker, Helen A. and Carter, Sasha P. and Tulaczyk, Slawek},
+  author = {Siegfried, Matthew Ross and Fricker, Helen A. and Carter, Sasha P. and Tulaczyk, Slawek M.},
   date = {2016-03-28},
   doi = {10.1002/2016GL067758},
   issn = {0094-8276, 1944-8007},
@@ -2736,7 +2802,7 @@
 }
 
 @article{Smithinventoryactivesubglacial2009,
-  author = {Smith, Benjamin E. and Fricker, Helen A. and Joughin, Ian R. and Tulaczyk, Slawek},
+  author = {Smith, Benjamin E. and Fricker, Helen A. and Joughin, Ian R. and Tulaczyk, Slawek M.},
   date = {2009},
   doi = {10.3189/002214309789470879},
   issn = {0022-1430, 1727-5652},
@@ -2914,8 +2980,22 @@
   volume = {61},
 }
 
+@article{Tulaczykroleelectricalconductivity2020,
+  author = {Tulaczyk, Slawek M. and Foley, Neil T.},
+  date = {2020-12-08},
+  doi = {10.5194/tc-14-4495-2020},
+  issn = {1994-0424},
+  journaltitle = {The Cryosphere},
+  langid = {english},
+  number = {12},
+  pages = {4495--4506},
+  shortjournal = {The Cryosphere},
+  title = {The Role of Electrical Conductivity in Radar Wave Reflection from Glacier Beds},
+  volume = {14},
+}
+
 @article{TulaczykWISSARDSubglacialLake2014,
-  author = {Tulaczyk, Slawek and Mikucki, Jill A. and Siegfried, Matthew Ross and Priscu, John C. and Barcheck, C. Grace and Beem, Lucas H. and Behar, Alberto and Burnett, Justin and Christner, Brent C. and Fisher, Andrew T. and Fricker, Helen A. and Mankoff, Kenneth D. and Powell, Ross D. and Rack, Frank and Sampson, Daniel and Scherer, Reed P. and Schwartz, Susan Y. and {The Wissard Science Team}},
+  author = {Tulaczyk, Slawek M. and Mikucki, Jill A. and Siegfried, Matthew Ross and Priscu, John C. and Barcheck, C. Grace and Beem, Lucas H. and Behar, Alberto and Burnett, Justin and Christner, Brent C. and Fisher, Andrew T. and Fricker, Helen A. and Mankoff, Kenneth D. and Powell, Ross D. and Rack, Frank and Sampson, Daniel and Scherer, Reed P. and Schwartz, Susan Y. and {The Wissard Science Team}},
   date = {2014},
   doi = {10.3189/2014AoG65A009},
   issn = {0260-3055, 1727-5644},
