:iphone: Rotate figures to landscape in Chapter 3
Rotate the inverted basal parameters figures 90 degrees to be in landscape so that they look bigger. Shifted some paragraphs so that less whitespace is wasted. The ice surface speed plot now has white contours at 100, 1000 and 2000 m/yr intervals too (to be committed at pyissm). Also changed the SIrange units style to be single (250 m to 20000 m becomes 250--20000 m).

--- a/thesis.tex
+++ b/thesis.tex
@@ -18,6 +18,7 @@
 % \DeclareGraphicsExtensions{.eps,.pdf,.png}  % use for final production
 \usepackage[bookmarks]{hyperref}
 \usepackage[utf8]{inputenc}
+\usepackage{lscape}
 \usepackage{mathtools}
 \usepackage{siunitx}
 \usepackage{tabularx}
@@ -26,6 +27,7 @@
 
 % SIrange using em-dash
 \sisetup{range-phrase=--}
+\sisetup{range-units=single}
 
 % subsubsubsections paragraphs
 \setcounter{secnumdepth}{3}
