:mag: Update acronym list
Added more acronyms to the list, and disabled the List of Symbols since I hardly use it. Also fixed a few missing commas.

--- a/thesis.tex
+++ b/thesis.tex
@@ -42,7 +42,13 @@
 \glsxtrnewsymbol[description={hydropotential}]{phi}{\ensuremath{\phi}}
 \glsxtrnewsymbol[description={time}]{t}{\ensuremath{t}}
 \newacronym{ConvNets}{ConvNets}{Convolutional Neural Networks}
+\newacronym{DBSCAN}{DBSCAN}{Density-based Spatial Clustering of Applications with Noise}
 \newacronym{DEM}{DEM}{Digital Elevation Model}
+\newacronym{ESRGAN}{ESRGAN}{Enhanced Super-Resolution Generative Adversarial Network}
+\newacronym{ICESat-2}{ICESat-2}{Ice, Cloud, and land Elevation Satellite 2}
+\newacronym{IPCC}{IPCC}{Intergovernmental Panel on Climate Change}
+\newacronym{ISSM}{ISSM}{Ice-sheet and Sea-level System Model}
+\newacronym{LeakyReLU}{LeakyReLU}{Leaky Rectified Linear Unit}
 \newacronym{RES}{RES}{Radio-echo sounding}
 \newacronym{SLE}{SLE}{Sea level equivalent}
 %Not a Number (NaN)
@@ -84,9 +90,6 @@ We hope that the computers are able to keep on learning faster because there's a
 
 \chapter*{Dedication}
 To Penny, who led me, so profoundly, to be
-
-\chapter*{Declaration}
-I declare that..
 
 \chapter*{Acknowledgements}
 
@@ -145,7 +148,7 @@ Finally to anyone that I left out, you are not unnoticed, this sentence is for y
 \listoffigures
 \listoftables
 
-\printnoidxglossary[type=symbols,sort=use,style=long,title={List of Symbols}]
+% \printnoidxglossary[type=symbols,sort=use,style=long,title={List of Symbols}]
 \printglossary[type=\acronymtype]
 
 \chapter{Introduction}
