--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,25 +3,28 @@
 
     \LARGE
     \textbf{
-      The subglacial landscape and hydrology of Antarctica as mapped from space
+      The subglacial landscape and hydrology \\
+      of Antarctica mapped from space
     }
 
-    \includegraphics[width=1.0\textwidth]{0_thesis_key_figure}
+    \includegraphics[width=1.0\textwidth]{chp0_thesis_key_figure}
 
     \Large
     A thesis presented for the degree of\\
-    Doctor of Philosophy
+    Doctor of Philosophy in Physical Geography
 
     \vspace{0.8cm}
 
     \textbf{Wei Ji Leong}
 
-    \includegraphics[width=0.4\textwidth]{0_arc_logo.jpg}
+    \includegraphics[width=0.4\textwidth]{chp0_arc_logo.jpg}
 
     \Large
-    Antarctic Research Centre, Victoria University of Wellington\\
+    Antarctic Research Centre\\
+    Victoria University of Wellington\\
     New Zealand\\
-    \today
+    29 January 2021
+    % \today
 
   \end{center}
 \end{titlepage}
