--- a/thesis.bib
+++ b/thesis.bib
@@ -1618,6 +1618,19 @@
   volume = {2},
 }
 
+@article{LeBrocqsubglacialwaterflowmodel2009,
+  author = {Le Brocq, A.M. and Payne, A.J. and Siegert, M.J. and Alley, Richard B.},
+  date = {2009},
+  doi = {10.3189/002214309790152564},
+  issn = {0022-1430, 1727-5652},
+  journaltitle = {Journal of Glaciology},
+  langid = {english},
+  number = {193},
+  pages = {879--888},
+  title = {A Subglacial Water-Flow Model for {{West Antarctica}}},
+  volume = {55},
+}
+
 @article{LeCunBackpropagationAppliedHandwritten1989,
   author = {LeCun, Y. and Boser, B. and Denker, J. S. and Henderson, D. and Howard, R. E. and Hubbard, W. and Jackel, L. D.},
   date = {1989-12},
@@ -2025,7 +2038,7 @@
 }
 
 @article{MouginotContinentWideInterferometric2019,
-  author = {Mouginot, J. and Rignot, E. and Scheuchl, B.},
+  author = {Mouginot, Jeremie and Rignot, E. and Scheuchl, B.},
   date = {2019-08-28},
   doi = {10.1029/2019GL083826},
   issn = {0094-8276, 1944-8007},
@@ -2234,7 +2247,7 @@
 }
 
 @article{RignotWidespreadrapidgrounding2014,
-  author = {Rignot, Eric and Mouginot, J. and Morlighem, M. and Seroussi, H. and Scheuchl, B.},
+  author = {Rignot, Eric and Mouginot, Jeremie and Morlighem, M. and Seroussi, H. and Scheuchl, B.},
   date = {2014-05-28},
   doi = {10.1002/2014GL060140},
   issn = {00948276},
@@ -2247,7 +2260,7 @@
 }
 
 @article{RignotAntarcticgroundingline2011,
-  author = {Rignot, Eric and Mouginot, J. and Scheuchl, B.},
+  author = {Rignot, Eric and Mouginot, Jeremie and Scheuchl, B.},
   date = {2011-05},
   doi = {10.1029/2011GL047109},
   issn = {00948276},
@@ -3028,18 +3041,6 @@
   pages = {987--1006},
   title = {An Iterative Inverse Method to Estimate Basal Topography and Initialize Ice Flow Models},
   volume = {7},
-}
-
-@article{VenturelliMidHoloceneGrounding2020,
-  author = {Venturelli, R. A. and Siegfried, Matthew Ross and Roush, K. A. and Li, W. and Burnett, J. and Zook, R. and Fricker, H. A. and Priscu, J. C. and Leventer, A. and Rosenheim, B. E.},
-  date = {2020-08-16},
-  doi = {10.1029/2020GL088476},
-  issn = {0094-8276, 1944-8007},
-  journaltitle = {Geophysical Research Letters},
-  langid = {english},
-  number = {15},
-  title = {Mid‐{{Holocene Grounding Line Retreat}} and {{Readvance}} at {{Whillans Ice Stream}}, {{West Antarctica}}},
-  volume = {47},
 }
 
 @article{Vick-MajorsBiogeochemicalConnectivityFreshwater2020,
