:pencil: Fix minor typos
Start with the easy stuff first.

--- a/thesis.tex
+++ b/thesis.tex
@@ -50,6 +50,7 @@
 \newacronym{ISSM}{ISSM}{Ice-sheet and Sea-level System Model}
 \newacronym{LeakyReLU}{LeakyReLU}{Leaky Rectified Linear Unit}
 \newacronym{RES}{RES}{Radio-echo sounding}
+\newacronym{SD}{SD}{Standard deviation}
 \newacronym{SLE}{SLE}{Sea level equivalent}
 %Not a Number (NaN)
 
@@ -128,7 +129,7 @@ To all the folks maintaining the Python and Pangeo ecosystem of geospatial packa
 \paragraph{Europe}
 
 To Poonam Vishwas, KaiKai Xue 薛凯, Yawen Tan 谭雅文, and all the friends I met in the 2019 Erasmus+ exchange at ZGIS, University of Salzburg, Austria, it was an awesome experience having so many like-minded people researching GIS together in Europe, an experience I will always treasure.
-To Dr. Hermann Klug, thank you for warmly inviting me to Salzburg and sorting out all manners of logistics in German, and to Dr. Dirk Tiede for introducing me to Object Based Image Analysis and providing a conceptual framework for understand the place of Convolutional Neural Networks in the wider field supervised classification is GIS.
+To Dr. Hermann Klug, thank you for warmly inviting me to Salzburg and sorting out all manners of logistics in German, and to Dr. Dirk Tiede for introducing me to Object Based Image Analysis and providing a conceptual framework for understanding the place of Convolutional Neural Networks in the wider field supervised classification is GIS.
 
 \paragraph{United States}
 
